--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Bug Tracker Demo:</strong> Simple app for submitting and tracking issues</li>
-      <li><strong>Sammy's Merch Site:</strong> Web layout for product showcases</li>
-    </ul>
-  </section>
+  <h2>Projects</h2>
+  <div class="project-card">
+    <h3>🐞 Bug Tracker</h3>
+    <p>A simple issue tracking app built with HTML, CSS, and JavaScript. Supports localStorage and basic state management.</p>
+    <a href="https://sammycrayz.github.io/bug-tracker-demo/" target="_blank">🌐 Live Demo</a> |
+    <a href="https://github.com/sammycrayz/bug-tracker-demo" target="_blank">💾 GitHub Repo</a>
+  </div>
+
+  <div class="project-card">
+    <h3>🌐 Portfolio Site</h3>
+    <p>My personal portfolio website showcasing skills, contact info, and project work.</p>
+    <a href="https://sammycrayz.github.io/sammy-portfolio/" target="_blank">🌐 Live Demo</a> |
+    <a href="https://github.com/sammycrayz/sammy-portfolio" target="_blank">💾 GitHub Repo</a>
+  </div>
+</section>
 
   <section id="contact">
     <h2>Contact</h2>
