--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <section id="about">
     <h2>About Me</h2>
     <p>I’m a Computer Science student graduating Fall 2025 with experience in web design, QA, and support roles. I love blending creative and technical skills to solve real-world problems.</p>
+    <a href="Sam_Appiah_Resume.pdf" download class="resume-btn">
+  📄 Download My Resume
+</a>
   </section>
 
   <section id="projects">
