--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
 
-  <section id="about" data-aos="fade-up">
+  <section id="about" class="fade-in-on-load">
     <h2>About Me</h2>
     <p>I’m a Computer Science student graduating Fall 2025 with experience in web design, QA, and support roles. I love blending creative and technical skills to solve real-world problems.</p>
     <a href="Sam_Appiah_Resume.pdf" download class="resume-btn">
