--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
   <section id="projects" data-aos="fade-down">
   <h2>Projects</h2>
+    <div class="project-summary" data-aos="fade-up">
+  📊 <strong>2 Projects Live</strong> • 1 In Progress • More Coming Soon
+</div>
   <div class="project-card" data-aos="zoom-in">
     <h3>🐞 Bug Tracker</h3>
     <p>A simple issue tracking app built with HTML, CSS, and JavaScript. Supports localStorage and basic state management.</p>
