--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sammy Crayz | Portfolio</title>
+  <title>Sam Appiah | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <!-- AOS CSS -->
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
@@ -29,9 +29,11 @@
 
   <section id="projects" data-aos="fade-down">
   <h2>Projects</h2>
+    
     <div class="project-summary" data-aos="fade-up">
   📊 <strong>2 Projects Live</strong> • 1 In Progress • More Coming Soon
 </div>
+    
   <div class="project-card" data-aos="zoom-in">
     <h3>🐞 Bug Tracker</h3>
     <p>A simple issue tracking app built with HTML, CSS, and JavaScript. Supports localStorage and basic state management.</p>
