--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
     <p>&copy; 2025 Sammy Crayz. All rights reserved.</p>
   </footer>
 
+  <div class="mini-footer">
+  <p>🛠️ Built by <strong>Sammy Crayz</strong> • v1.0 • Last updated: Sept 2025</p>
+</div>
+
   <!-- AOS JS -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
