--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     <a href="https://sammycrayz.github.io/sammy-portfolio/" target="_blank">🌐 Live Demo</a> |
     <a href="https://github.com/sammycrayz/sammy-portfolio" target="_blank">💾 GitHub Repo</a>
   </div>
+
+    <div class="project-card upcoming">
+  <h3>🛠️ Next Project Coming Soon</h3>
+  <p>This space is reserved for an upcoming project. Stay tuned!</p>
+</div>
+    
 </section>
 
   <section id="contact" data-aos="flip-left">
