--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </nav>
+    <button id="darkModeToggle">🌓 Toggle Dark Mode</button>
   </header>
 
   <section id="about" class="fade-in-on-load">
@@ -48,7 +49,7 @@
     <a href="https://github.com/sammycrayz/sammy-portfolio" target="_blank">💾 GitHub Repo</a>
   </div>
 
-    <div class="project-card upcoming">
+    <div class="project-card upcoming" data-aos="zoom-in" data-aos-delay="150">
   <h3>🛠️ Next Project Coming Soon</h3>
   <p>This space is reserved for an upcoming project. Stay tuned!</p>
 </div>
