--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 </a>
   </section>
 
+<h2>🛠️ Tech Stack</h2>
+<ul class="tech-stack">
+  <li>HTML5</li>
+  <li>CSS3</li>
+  <li>JavaScript</li>
+  <li>Git & GitHub</li>
+  <li>VS Code</li>
+  <li>Responsive Design</li>
+</ul>
+  
   <section id="projects" data-aos="fade-down">
   <h2>Projects</h2>
     
