--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </a>
   </section>
 
+  <section id="tech">
 <h2>🛠️ Tech Stack</h2>
 <ul class="tech-stack">
   <li>HTML5</li>
@@ -37,6 +38,7 @@
   <li>VS Code</li>
   <li>Responsive Design</li>
 </ul>
+  </section>
   
   <section id="projects" data-aos="fade-down">
   <h2>Projects</h2>
